--- a/packages/apps/public/index.html
+++ b/packages/apps/public/index.html
@@ -70,19 +70,19 @@
       }
 
       [data-theme="light"] {
-        --bg-input: #ffffff;
-        --bg-input-error: #fff6f6;
+        --bg-input: #191A43;
+        --bg-input-error: #191A43;
         --bg-inverse: rgba(244, 242, 240, 0.91);
-        --bg-menu: #ffffff;
-        --bg-page: #f5f3f1;
-        --bg-table: #ffffff;
-        --bg-tabs: #ffffff;
+        --bg-menu: #191A43;
+        --bg-page: #00012F;
+        --bg-table: #191A43;
+        --bg-tabs: #191A43;
         --bg-toggle: #e4e5e6;
-        --bg-sidebar: #fafafa;
+        --bg-sidebar: #191A43;
         --bg-static-extra: rgba(200, 200, 200, 0.1);
         --border-input: rgba(34, 36, 38, .15);
         --border-table: #efedeb;
-        --border-tabs: #f1efed;
+        --border-tabs: #191A43;
         --color-checkbox: rgba(34, 36, 38, 0.15);
         --color-error: rgba(139, 0, 0);
         /* --color-header: rgba(78, 78, 78, 0.8); */
@@ -90,7 +90,7 @@
         /* --color-summary: rgba(78, 78, 78, 0.66); */
         /* --color-table-foot: rgba(78, 78, 78, 0.66); */
         /* --color-table-head: rgba(78, 78, 78, 0.8); */
-        --color-text: rgba(78, 78, 78, 0.8); /* 1 */
+        --color-text: #ffffff; /* 1 */
         --opacity-gray: 0.75;
       }
 
